# typescript-bazel-minimal

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  PROTO_GOTCHAS.md  README.md  TROUBLESHOOTING_TS.md  antigravity_state_summary.md  builder-pod.yaml  kind-config.yaml  maven_install.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.agent/rules/: before-success.md
.agent/workflows/: pnpm.md
cypress/: tsconfig.json
cypress/e2e/: spec.cy.ts
e2e/: BUILD.bazel  example.spec.ts  kind_test.sh  playwright.config.ts  test_wrapper.sh
envoy/: BUILD.bazel  envoy.yaml
experiments/midnight-killer/: BUILD.bazel  MidnightKiller.java
k8s/: BUILD.bazel  deployment.yaml
keys/: cert.pem  private_pkcs1.pem
proto/: BUILD.bazel  calculator.proto  temp_debug.bzl
services/calculator/: BUILD.bazel  CalculatorServer.java
services/calculator/proto/: BUILD.bazel  calculator.proto
services/gateway/: BUILD.bazel  GatewayServer.java  GatewayServerTest.java  envoy-localhost.yaml  envoy.yaml
services/gateway/static/: 404.html  bounce.html  index.html  silent-auth.html
services/gateway/static/_next/static/B9v4NIxBNAKUomD_ghzhq/: _buildManifest.js
services/gateway/static/_next/static/chunks/: 807-136c0f9e221a396a.js  8da32370-d40d8f138635fe03.js  framework-78a10a1e32529eaa.js  main-234fc3eb2f2da65b.js
services/gateway/static/_next/static/chunks/pages/: _app-9cfcb5c816bb51be.js  _error-d72fb52a028670c6.js  index-b8f42add9a012c3a.js
services/greeter/: BUILD.bazel  GreeterServer.java
services/greeter/proto/: BUILD.bazel
services/jwt-wrapper/: BUILD.bazel  JwtWrapperServer.java  RedirectEncodingTest.java
src/: BUILD.bazel  SimpleWebServer.java  index.html  index.tsx  server.sh
tools/: BUILD.bazel  custom_rules.bzl
