load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig_build",
    src = "tsconfig.build.json",
    deps = [":tsconfig"],
    visibility = ["//visibility:public"],
)

exports_files(["tsconfig.json", "package.json"])

npm_link_all_packages(name = "node_modules")
