load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig_build",
    src = "tsconfig.build.json",
    deps = [":tsconfig"],
    visibility = ["//visibility:public"],
)

exports_files([
    "tsconfig.json",
    "package.json",
    "pnpm-lock.yaml",
    "cypress.config.js",
    "cypress/support/e2e.ts",
    "cypress/support/commands.ts",
    "cypress/e2e/spec.cy.ts",
])

load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "cypress_files",
    srcs = [
        "tsconfig.json",
        "cypress/tsconfig.json",
        "cypress.config.js",
        "cypress/support/e2e.ts",
        "cypress/support/commands.ts",
        "cypress/e2e/spec.cy.ts",
    ],
    visibility = ["//visibility:public"],
)

npm_link_all_packages(name = "node_modules")

load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")

npm_link_package(
    name = "node_modules/@myorg/calculator",
    src = "//packages/calculator:pkg",
)
