load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig_build",
    src = "tsconfig.build.json",
    deps = [":tsconfig"],
    visibility = ["//visibility:public"],
)

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

copy_to_bin(
    name = "tsconfig_bin",
    srcs = ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

exports_files([
    "tsconfig.json",
    "package.json",
    "pnpm-lock.yaml",
])

npm_link_all_packages(name = "node_modules")

load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")

npm_link_package(
    name = "node_modules/@myorg/calculator",
    src = "//packages/calculator:pkg",
)


