module(
    name = "typescript_bazel_minimal",
    version = "0.0.0",
)

bazel_dep(name = "aspect_rules_ts", version = "3.3.2")
bazel_dep(name = "aspect_rules_js", version = "2.7.0")
bazel_dep(name = "aspect_rules_cypress", version = "0.7.2")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "aspect_rules_esbuild", version = "0.23.0")
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")

git_override(
    module_name = "aspect_rules_esbuild",
    commit = "97813128f38064a84602d8d444e30f7edf62efa3",
    remote = "https://github.com/JonathanPerry651/rules_esbuild",
)


npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

cypress = use_extension("@aspect_rules_cypress//cypress:extensions.bzl", "cypress")
cypress.toolchain(cypress_version = "13.6.1")
use_repo(cypress, "cypress_toolchains")
register_toolchains("@cypress_toolchains//:all")

rules_esbuild_ext = use_extension("@aspect_rules_esbuild//esbuild:extensions.bzl", "esbuild")
rules_esbuild_ext.toolchain(esbuild_version = "0.23.0")
use_repo(rules_esbuild_ext, "esbuild_toolchains")
register_toolchains("@esbuild_toolchains//:all")





bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.5.0")
bazel_dep(name = "grpc-java", version = "1.64.0")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v25.3",
)
use_repo(protoc, "com_google_protobuf", "toolchains_protoc_hub")

register_toolchains("@toolchains_protoc_hub//:all")

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_js", version = "5.8.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.grpc:grpc-api:1.64.0",
        "io.grpc:grpc-core:1.64.0",
        "io.grpc:grpc-context:1.64.0",
        "io.grpc:grpc-netty-shaded:1.64.0",
        "io.grpc:grpc-protobuf:1.64.0",
        "io.grpc:grpc-stub:1.64.0",
        "io.grpc:grpc-testing:1.64.0",
        "io.grpc:grpc-inprocess:1.64.0",
        "javax.annotation:javax.annotation-api:1.3.2",
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.2",
        "io.netty:netty-transport-native-epoll:jar:linux-x86_64:4.1.100.Final",
        "io.netty:netty-tcnative-boringssl-static:2.0.61.Final",
        "io.netty:netty-transport:4.1.100.Final",
        "io.netty:netty-transport-native-unix-common:4.1.100.Final",
        "com.google.api.grpc:proto-google-common-protos:2.29.0",
    ],
    lock_file = "//:maven_install.json",
    resolver = "maven",
)
use_repo(maven, "maven")

bazel_dep(name = "rules_java", version = "8.14.0")

java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")

bazel_dep(name = "rules_oci", version = "1.7.4")
bazel_dep(name = "rules_pkg", version = "0.10.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    image = "gcr.io/distroless/java21-debian12",
    tag = "latest",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "envoy_distroless",
    image = "docker.io/envoyproxy/envoy",
    tag = "v1.29.1",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_java", "envoy_distroless")


