load("@npm//:@playwright/test/package_json.bzl", "bin")

bin.playwright_test(
    name = "test",
    args = [
        "test",
        "--config=playwright.config.ts",
    ],
    data = [
        "playwright.config.ts",
        "example.spec.ts",
        "//:node_modules/@playwright/test",
        "//:node_modules/playwright",
    ],
    tags = ["no-sandbox"],
    chdir = "e2e",
    visibility = ["//visibility:public"],
)

bin.playwright_binary(
    name = "install_browsers",
    args = ["install"],
    data = [
        "//:node_modules/@playwright/test",
        "//:node_modules/playwright",
    ],
    tags = ["no-sandbox"],
)
