load("@rules_proto_grpc_java//:defs.bzl", "java_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
)

java_proto_library(
    name = "helloworld_java_proto",
    deps = [":helloworld_proto"],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    protos = [":helloworld_proto"],
    deps = [":helloworld_java_proto"],
)

load("@rules_proto_grpc_js//:defs.bzl", "js_grpc_web_library")

js_grpc_web_library(
    name = "helloworld_js_grpc_web",
    protos = [":helloworld_proto"],
)

proto_library(
    name = "calculator_proto",
    srcs = ["calculator.proto"],
    deps = ["@googleapis//google/rpc:status_proto"],
)

java_proto_library(
    name = "calculator_java_proto",
    deps = [":calculator_proto"],
)

java_grpc_library(
    name = "calculator_java_grpc",
    protos = [":calculator_proto"],
    deps = [
        ":calculator_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

js_grpc_web_library(
    name = "calculator_js_grpc_web",
    protos = [
        ":calculator_proto",
        "@googleapis//google/rpc:status_proto",
    ],
)
