load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "index",
    srcs = ["index.tsx"],
    source_map = True,
    declaration = True,
    tsconfig = "//:tsconfig_build",
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/@types/scheduler",
        "//:node_modules/@myorg/calculator",
    ],
    transpiler = "tsc",

)

filegroup(
    name = "assets",
    srcs = [
        "index.html",
        ":index",
        "//:node_modules/@myorg/calculator",
    ],
)



java_binary(
    name = "java_server",
    srcs = ["SimpleWebServer.java"],
    main_class = "src.SimpleWebServer",
    data = [":assets"],
    visibility = ["//visibility:public"],
)
