load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_tarball")

java_binary(
    name = "gateway",
    main_class = "services.gateway.GatewayServer",
    runtime_deps = [":gateway_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app_layer",
    srcs = [":gateway_deploy.jar"],
    package_dir = "/app",
)

pkg_tar(
    name = "static_layer",
    srcs = glob(["static/**"]) + [
        "//packages/calculator:bundle",
        "//packages/grpc-client:silent_auth_bundle",
    ],
    package_dir = "/app/static",
)

oci_image(
    name = "image",
    base = "@distroless_java",
    entrypoint = ["java", "-jar", "/app/gateway_deploy.jar"],
    tars = [":app_layer", ":static_layer"],
    annotations = {
        "org.opencontainers.image.ref.name": "localhost/bazel/services/gateway:tarball",
    },
)

oci_image_index(
    name = "image_index",
    images = [":image"],
)

genrule(
    name = "tarball",
    srcs = [":image"],
    outs = ["gateway.tar"],
    cmd = """
        mkdir -p image_mod
        cp -RL $(location :image)/* image_mod/
        chmod -R u+w image_mod
        python3 -c "import json; f='image_mod/index.json'; d=json.load(open(f)); d['manifests'][0]['annotations']={'org.opencontainers.image.ref.name':'localhost/bazel/services/gateway:tarball'}; json.dump(d,open(f,'w'))"
        tar -C image_mod -cf $@ .
    """,
    visibility = ["//visibility:public"],
)

java_test(
    name = "GatewayServerTest",
    srcs = ["GatewayServerTest.java"],
    test_class = "services.gateway.GatewayServerTest",
    deps = [
        ":gateway_deploy.jar", # Use the deploy jar to get all deps, or list them explicitly? 
        # Better to list source and deps explicitly or depend on a java_library. 
        # But gateway is a binary. I should probably extract a java_library.
        # For now, I'll rely on the source file being in the same package (if I move it).
        # Actually, let's just make gateway a java_library + java_binary.
        ":gateway_lib",
        "//services/greeter/proto:helloworld_java_proto",
        "//services/greeter/proto:helloworld_java_grpc",
        "//services/calculator/proto:calculator_java_proto",
        "//services/calculator/proto:calculator_java_grpc",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_core",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:io_grpc_grpc_inprocess",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:junit_junit",
        "@maven//:com_google_truth_truth",
    ],
)

java_library(
    name = "gateway_lib",
    srcs = ["GatewayServer.java"],
    deps = [
        "//services/greeter/proto:helloworld_java_proto",
        "//services/greeter/proto:helloworld_java_grpc",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)
