load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "jwt-wrapper",
    srcs = ["JwtWrapperServer.java"],
    main_class = "services.jwtwrapper.JwtWrapperServer",
    deps = [
        "@maven//:commons_cli_commons_cli",
        "@maven//:io_netty_netty_codec_http",
    ],
    visibility = ["//visibility:public"],
)
